@@ -1,8 +1,11 @@
 ModulesView.0=Modules View Only
 ModulesView.1=executable
+ModulesView.10=Size: 
 ModulesView.2=shared library
 ModulesView.3=Type: 
 ModulesView.4=Symbols: 
 ModulesView.5=loaded
 ModulesView.6=not loaded
 ModulesView.7=Symbols file: 
+ModulesView.8=CPU: 
+ModulesView.9=Base address: 
